Fix button shadow styling for improved visibility

--- a/src/style/components.scss
+++ b/src/style/components.scss
@@ -13,4 +13,5 @@
     width: 100%;
     color: white;
     background-color: $vegetta-color;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
